AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -Og -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable  -Wno-strict-aliasing -DDEBUG=3

SUBDIRS = 

noinst_LIBRARIES = libsrc.a
libsrc_a_SOURCES = _data.cpp  _data.h  Makefile.am  snake.cpp  snake.h

#EXTRA_DIST = schick.h

